package com.niyaj.popos.features.addon_item.domain.util

object AddOnConstants {

    const val ADDON_WHITELIST_ITEM = "Cold"

    const val ADDON_SCREEN = "AddOn Screen"
    const val ADDON_SCREEN_TITLE = "AddOn Items"
    const val ADDON_NOT_AVAIlABLE = "AddOn Not Available"
    const val ADDON_ADD_EDIT_BUTTON = "AddEdit AddOn Item Button"
    const val NO_ITEMS_IN_ADDON = "AddOn Items Not Found"
    const val ADDON_SEARCH_PLACEHOLDER = "Search for AddOn Items..."

    const val FILTER_ADD_ON_ITEM = "Filter AddOn Item"

    const val ADD_EDIT_ADDON_SCREEN = "Create New Addon Screen"
    const val CREATE_NEW_ADD_ON = "Create New AddOn"
    const val EDIT_ADD_ON_ITEM = "Update AddOn Item"

    const val ADDON_NAME_FIELD = "AddOn Name"
    const val ADDON_NAME_ERROR_TAG = "AddOn Name Error"

    const val ADDON_PRICE_FIELD = "AddOn Price"
    const val ADDON_PRICE_ERROR_TAG = "AddOn Price Error"

    const val ADDON_NAME_EMPTY_ERROR = "AddOn item name must not be empty."
    const val ADDON_NAME_DIGIT_ERROR = "AddOn item name must not contains any digit."
    const val ADDON_NAME_LENGTH_ERROR = "AddOn item name must be at least 5 characters long."
    const val ADDON_NAME_ALREADY_EXIST_ERROR = "AddOn item name already exists."

    const val ADDON_PRICE_EMPTY_ERROR = "AddOn item price must not be empty"
    const val ADDON_PRICE_LESS_THAN_FIVE_ERROR = "AddOn item price must greater than 5 rupees."

    const val DELETE_ADD_ON_ITEM_MESSAGE = "Are you sure to delete these addon items?"

    const val ADDON_ITEM_TAG = "Tag-"

    const val ADDON_ITEM_REFRESH = "Addon Item Refresh"

    const val ADD_EDIT_SCREEN_CLOSE_BUTTON = "Close AddOn Screen"
    const val ADDON_EDIT_BUTTON = "Edit Addon Button"
    const val ADDON_DELETE_BUTTON = "Delete Addon Button"
    const val ADDON_SEARCH_BUTTON = "Search Addon Button"
    const val ADDON_FILTER_BUTTON = "Filter Addon Button"
    const val ADDON_SELECT_ALL_BUTTON = "Select All Addon"
    const val ADDON_DESELECT_ALL_BUTTON = "Deselect All Addon"
    const val ADDON_SEARCH_BAR = "Search Addon TextField"

    const val ADDON_FILTER_BY_ID = "AddOn Filter by ID"
    const val ADDON_FILTER_BY_NAME = "AddOn Filter by Name"
    const val ADDON_FILTER_BY_PRICE = "AddOn Filter by Price"
    const val ADDON_FILTER_BY_DATE = "AddOn Filter by Date"

}