...
    const val PRINT_LOGO = R.drawable.reslogo.toString()

    //Common Constants
    const val SEARCH_ITEM_NOT_FOUND = "Searched Item Not Found"

    //Dialog positive button test tag
    const val POSITIVE_BUTTON = "positive"
    const val NEGATIVE_BUTTON = "negative"

    const val STANDARD_SEARCH_BAR = "Standard Search Bar"
    const val STANDARD_BACK_BUTTON = "Standard Back Button"
    const val SEARCH_BAR_CLEAR_BUTTON = "SearchBar Close Button"

    const val STANDARD_BOTTOM_SHEET = "BottomSheet"
...
